# rust-rpc

example/client/: Cargo.toml
example/client/src/: main.rs
example/rpc_lib/: Cargo.toml
example/rpc_lib/src/: lib.rs
example/server/: Cargo.toml
example/server/src/: main.rs
rpc_core/: Cargo.toml
rpc_core/src/: app.rs  lib.rs  service.rs  transport.rs
rpc_macro/: Cargo.toml
rpc_macro/src/: lib.rs
