[package]
name = "rpc_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["sync"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
log = "0.4.20"
rpc_macro = { path = "../rpc_macro", optional = true }

[features]
service = ["rpc_macro"]
