[package]
name = "rpc_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc_core = { path = "../../rpc_core", features = ["service"] }
tokio = { version = "1.31.0", features = ["full"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
